# rustsigwatch

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  justfile
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  monitor.rs  signals.rs
src/bpf/: mod.rs  sigwatch.bpf.c
